<resources>
    <string name="app_name">Journal Core</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="messageWelcome">Dive into a world of creativity and imagination where you can share, explore, and connect through stories.</string>
    <string name="titleWelcome">Hello Peeps,</string>
    <string name="titleSignup">Create Your Account Here!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="messageLogin">Enter your data to continue :)</string>
    <string name="titleLogin">Welcome Back!</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="imageLogin">Login page image</string>
    <string name="inputEmail">Enter your email</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="inputPass">Enter your password</string>
    <string name="invalid_password">Password must not be less than 8 characters</string>
    <string name="inputName">Enter your name</string>
    <string name="register_dialog_message">Congrats! your account is ready. Login share your story.</string>
    <string name="dialog_positive_button">Next</string>
    <string name="register_failed">Login failed! Enter the correct email and password!</string>
    <string name="login_dialog">"You have successfully logged in! "</string>
    <string name="login_failed_title">Try Again!</string>
    <string name="login_failed">Please enter your email and password data correctly</string>
    <string name="story_image">Story image</string>
    <string name="description">Description</string>
    <string name="language">Language</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description_hint">Write your description…</string>
    <string name="upload">Upload</string>
    <string name="add_story_button">Add story button</string>
    <string name="logout_alert_tittle">Logout</string>
    <string name="logout_alert_message">Are you sure you want to leave?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload_page_title">Upload Story</string>
    <string name="upload_dialog_message">Yippie, your story has been uploaded</string>
    <string name="empty_image_warning">Please insert the image file first!</string>
    <string name="detail_page_title">Detail Story</string>
    <string name="imageWelcome">Image Welcome</string>
    <string name="createAccount">Create account?</string>
    <string name="imageSignup">Image Signup</string>
    <string name="image_splashscreen">Image Splashscreen</string>
    <string name="AddAccount">Already have an account?</string>
    <string name="showPass">Show Password</string>
    <string name="imageStory">ImageStory</string>
    <string name="register_failed_title">Sorry!</string>
    <string name="imageupload">image Upload</string>
    <string name="image_user">image user</string>
    <string name="image_detail">image detail</string>
</resources>